Implementamos um logger robusto para quase todo o sistema. Também configuramos o servidor para enviar os logs para o AWS armazenar. O log detalha erros, guarda arquivos de envio e retorno de forma intuitiva. Precisamos implementar o log no RSVP, que é o mais fácil. Também deixamos o ccódigo mais limpo focando no Single Responsibility Principle (SRP). Terminando de implementar o logger, vamos focar na estilização do frontend. Depois disso, o sistema estará pronto para subir para produção.